[package]
  name = "chirpstack-concentratord-2g4"
  repository = "https://github.com/chirpstack/chirpstack-concentratord/"
  description = "LoRa concentrator HAL daemon (2.4GHz)"
  license = "MIT"
  version = "4.5.0"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2024"
  publish = false

[dependencies]
  libloragw-2g4 = { path = "../libloragw-2g4" }
  libconcentratord = { path = "../libconcentratord" }
  chirpstack_api = { version = "4.13", default-features = false }
  serde = { version = "1.0", features = ["derive"] }
  toml = "0.8"
  clap = { version = "4.5", features = ["derive"] }
  log = "0.4"
  simple_logger = "5.0"
  zmq = "0.10"
  hex = "0.4"
  chrono = "0.4"
  humantime-serde = "1.1"
  syslog = "7.0"
  signal-hook = "0.3"
  handlebars = "6.3"
  rand = "0.9"
  anyhow = "1.0"
