[package]
  name = "chirpstack-concentratord-2g4"
  repository = "https://github.com/chirpstack/chirpstack-concentratord/"
  description = "LoRa concentrator HAL daemon (2.4GHz)"
  license = "MIT"
  version = "4.6.0"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2024"
  publish = false

[dependencies]
  libloragw-2g4 = { path = "../libloragw-2g4" }
  libconcentratord = { path = "../libconcentratord" }
  chirpstack_api = { workspace = true }
  serde = { workspace = true }
  toml = { workspace = true }
  clap = { workspace = true }
  log = { workspace = true }
  simple_logger = { workspace = true }
  zmq = { workspace = true }
  hex = { workspace = true }
  chrono = { workspace = true }
  humantime-serde = { workspace = true }
  syslog = { workspace = true }
  signal-hook = { workspace = true }
  handlebars = { workspace = true }
  getrandom = { workspace = true }
  anyhow = { workspace = true }

# Debian packaging.
[package.metadata.deb]
assets = [
    [
        "target/release/chirpstack-concentratord-2g4",
        "usr/bin/chirpstack-concentratord-2g4",
        "755",
    ],
    [
        "./config/concentratord.toml",
        "etc/chirpstack-concentratord/chirpstack-concentratord-2g4.toml",
        "640",
    ],
]
conf-files = [
    "/etc/chirpstack-concentratord/chirpstack-concentratord-2g4.toml",
]
suggests = "mosquitto"
maintainer-scripts = "./debian/"
systemd-units = { enable = true }
