[package]
  name = "chirpstack-concentratord-sx1301"
  description = "LoRa concentrator HAL daemon (sx1301)"
  repository = "https://github.com/chirpstack/chirpstack-concentratord/"
  license = "MIT"
  version = "4.4.4"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2021"
  publish = false

[dependencies]
  libloragw-sx1301 = { path = "../libloragw-sx1301" }
  libconcentratord = { path = "../libconcentratord" }
  chirpstack_api = { version = "4.9", default-features = false }
  serde = { version = "1.0", features = ["derive"] }
  toml = "0.8"
  clap = { version = "4.5", features = ["derive"] }
  log = "0.4"
  simple_logger = "5.0"
  zmq = "0.10"
  hex = "0.4"
  lazy_static = "1.5"
  chrono = "0.4"
  humantime-serde = "1.1"
  syslog = "7.0"
  prost = "0.13"
  prost-types = "0.13"
  signal-hook = "0.3"
  handlebars = "6.0"
  rand = "0.8"
  anyhow = "1.0"
