[package]
  name = "chirpstack-concentratord-sx1301"
  description = "LoRa concentrator HAL daemon (sx1301)"
  repository = "https://github.com/chirpstack/chirpstack-concentratord/"
  license = "MIT"
  version = "4.6.0"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2024"
  publish = false

[dependencies]
  libloragw-sx1301 = { path = "../libloragw-sx1301" }
  libconcentratord = { path = "../libconcentratord" }
  chirpstack_api = { workspace = true }
  serde = { workspace = true }
  toml = { workspace = true }
  clap = { workspace = true }
  log = { workspace = true }
  simple_logger = { workspace = true }
  zmq = { workspace = true }
  hex = { workspace = true }
  chrono = { workspace = true }
  humantime-serde = { workspace = true }
  syslog = { workspace = true }
  signal-hook = { workspace = true }
  handlebars = { workspace = true }
  getrandom = { workspace = true }
  anyhow = { workspace = true }

  # Debian packaging.
  [package.metadata.deb]
    assets = [
      [
        "target/release/chirpstack-concentratord-sx1301",
        "usr/bin/chirpstack-concentratord-sx1301",
        "755",
      ],
      [
        "./config/concentratord.toml",
        "etc/chirpstack-concentratord-sx1301/concentratord.toml",
        "640",
      ],
      [
        "./config/region_eu868.toml",
        "etc/chirpstack-concentratord-sx1301/region.toml",
        "640",
      ],
      [
        "./config/channels_eu868.toml",
        "etc/chirpstack-concentratord-sx1301/channels.toml",
        "640",
      ],
      [
        "./config/*.toml",
        "etc/chirpstack-concentratord-sx1301/examples",
        "640",
      ],
    ]
    conf-files = [
      "/etc/chirpstack-concentratord-sx1301/concentratord.toml",
      "/etc/chirpstack-concentratord-sx1301/region.toml",
      "/etc/chirpstack-concentratord-sx1301/channels.toml",
    ]
    suggests = "mosquitto"
    maintainer-scripts = "./debian/"
    systemd-units = { enable = true }
