[package]
name = "chirpstack-udp-bridge"
version = "3.0.0-test.9"
authors = ["Orne Brocaar <info@brocaar.com>"]
edition = "2018"
publish = false

[dependencies]
libconcentratord = {path = "../libconcentratord"}
chirpstack_api = { version = "3.1.2", default-features = false }
serde_json = "1.0"
zmq = "0.9.1"
clap = "2.33.0"
hex = "0.4.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.8"
simple_logger = "1.3.0"
uuid = { version = "0.8.1", features = ["v4"] }
syslog = "5.0.0"
rand = "0.7.3"
chrono = "0.4.19"
base64 = "0.13.0"
prost = "0.6"
prost-types = "0.6"
prometheus = "0.11.0"
lazy_static = "1.4"

[features]
default = ['zmq/vendored']
