[package]
  name = "gateway-id"
  repository = "https://github.com/brocaar/chirpstack-concentratord/"
  description = "Print the Gateway ID"
  license = "MIT"
  version = "4.5.3"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2024"
  publish = false

[dependencies]
  zmq = { workspace = true }
  clap = { workspace = true }
  chirpstack_api = { workspace = true }
