[package]
  name = "libconcentratord"
  version = "4.4.8"
  authors = ["Orne Brocaar <@brocaar.com>"]
  edition = "2024"
  publish = false

[dependencies]
  log = "0.4"
  zmq = "0.10"
  chirpstack_api = { version = "4.13.0-test.1", default-features = false }
  hex = "0.4"
  gpiocdev = { version = "0.7", features = ["uapi_v1"] }
  anyhow = "1.0"
  thiserror = "2.0"
  serde = { version = "1.0", features = ["derive"] }
  serde_json = "1.0"
