[package]
  name = "libconcentratord"
  version = "4.5.3"
  authors = ["Orne Brocaar <@brocaar.com>"]
  edition = "2024"
  publish = false

[dependencies]
  log = { workspace = true }
  zmq = { workspace = true }
  chirpstack_api = { workspace = true }
  hex = { workspace = true }
  gpiocdev = { workspace = true }
  anyhow = { workspace = true }
  thiserror = { workspace = true }
  serde = { workspace = true }
  serde_json = { workspace = true }
